@df fix video alignment issues

--- a/people-smuggler/css/main.css
+++ b/people-smuggler/css/main.css
@@ -200,7 +200,7 @@ a, a:hover {
 
 .video__item {
 	width: 100%;
-	float: left;
+	display: block;
 }
 
 .video__caption {
